force-app/main/default/objects/Bot_Appointment__c/Bot_Appointment__c.object-meta.xml
<CustomObject>
    <description>The Object to be used in Chat Bot for appointment for an agent with customer.</description>
    <label>Bot Appointment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>