force-app/main/default/objects/Bot_Appointment__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <label>AppointmentDate</label>
    <type>Date</type>
</CustomField>