force-app/main/default/objects/Bot_Appointment__c/fields/AppointmentSlot__c.field-meta.xml
<CustomField>
    <fullName>AppointmentSlot__c</fullName>
    <label>AppointmentSlot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>