force-app/main/default/objects/Bot_Appointment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bot Appointments</relationshipLabel>
    <relationshipName>Bot_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>