force-app/main/default/objects/Bot_Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AppointmentDate__c</columns>
    <columns>Contact__c</columns>
    <columns>AppointmentSlot__c</columns>
    <columns>JobType__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>